[update]/resume-link

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </section>
 <section class="container">
     <div id="links">
+        <a class="link" href="./assets/doc/resume.pdf" target="blank">Resume</a>
         <a class="link" href="https://saswatsamal.netlify.app" target="blank">Website</a>
         <a class="link" href="https://github.com/saswatsamal" target="blank">GitHub</a>
         <a class="link" href="https://linkedin.com/in/saswatsamal" target="blank">LinkedIn</a>
