--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Saswat Samal</title>
+      <!-- Meta Contents -->
+      <meta property="og:title" content="Saswat Samal">
+      <meta property="og:description" content="Website of Saswat Samal.">
+      <meta property="og:description" content="Machine Learning | Web UI | Django | IoT">
+      <meta property="og:image" content="https://res.cloudinary.com/saswatsamal/image/upload/v1648646320/saswatsamal/og_ot0k2n.png">
+      <meta property="og:url" content="https://saswatsamal.social">
+      <meta name="keywords" content="Saswat, Saswat Samal, Samal, Saswat Samal SOA, Saswat Samal GitHub,Saswat Samal Instagram, Saswat Samal BhubDevaneswar, Machine Learning, IoT, Arduino, Robotics, Web UI">
+      <meta name="author" content="Saswat Samal">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="./assets/img/logo.png" type="image/x-icon"/>
+      <!-- Title -->
+      <title>Saswat Samal</title>
 </head>
 <body>
 <section class="head">
@@ -17,10 +23,10 @@
 <section class="container">
     <div id="links">
         <a class="link" href="./assets/doc/resume.pdf" target="blank">Resume</a>
-        <a class="link" href="https://saswatsamal.netlify.app" target="blank">Website</a>
+        <a class="link" href="https://saswatsamal.tech" target="blank">Website</a>
         <a class="link" href="https://github.com/saswatsamal" target="blank">GitHub</a>
         <a class="link" href="https://linkedin.com/in/saswatsamal" target="blank">LinkedIn</a>
-        <a class="link" href="https://instagram.com/saswatsamal.py" target="blank">Instagram</a>
+        <a class="link" href="https://instagram.com/basicallysaswat" target="blank">Instagram</a>
         <a class="link" href="https://twitter.com/TweetSaswat" target="blank">Twitter</a>
     </div>
 </section>
