--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
       <!-- Meta Contents -->
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta property="og:title" content="Saswat Samal">
       <meta property="og:description" content="Website of Saswat Samal.">
       <meta property="og:description" content="Machine Learning | Web UI | Django | IoT">
