--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9V6K5FL5X8"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-9V6K5FL5X8');
+    </script>
       <!-- Meta Contents -->
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta property="og:title" content="Saswat Samal">
