--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </section>
 <section class="container">
     <div id="links">
-        <a class="link" href="./assets/doc/resume.pdf" target="blank">Resume</a>
+        <a class="link" href="https://saswatsamal.tech/resume" target="blank">Resume</a>
         <a class="link" href="https://saswatsamal.tech" target="blank">Website</a>
         <a class="link" href="https://github.com/saswatsamal" target="blank">GitHub</a>
         <a class="link" href="https://linkedin.com/in/saswatsamal" target="blank">LinkedIn</a>
