[update]/footer-link

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
 </section>
 <section class="footer">
-    <p id="Name"> &copy; <a class="footer-link" href="https://saswatsamal.netlify.app/" target="blank">saswatsamal.</a></p>
+    <p id="Name"> &copy; <a class="footer-link" href="https://saswatsamal.tech/" target="blank">saswatsamal.</a></p>
 </section>
 </body>
 </html>
